--- a/roles/frontend/tasks/main.yml
+++ b/roles/frontend/tasks/main.yml
@@ -1,7 +1,7 @@
 - name: Install Nginx
   ansible.builtin.yum:
     name: Nginx
-    state: Installed
+    state: installed
 
 - name: Copy roboshop Config file
   ansible.builtin.copy:
