--- a/roles/frontend/tasks/main.yml
+++ b/roles/frontend/tasks/main.yml
@@ -1,6 +1,6 @@
 - name: Install Nginx
   ansible.builtin.yum:
-    name: Nginx
+    name: nginx
     state: installed
 
 - name: Copy roboshop Config file
