--- a/roles/frontend/tasks/main.yml
+++ b/roles/frontend/tasks/main.yml
@@ -8,12 +8,17 @@
     src: roboshop.conf
     dest: /etc/nginx/default.d/roboshop.conf
 
+- name: Copy Nginx Config file
+  ansible.builtin.template:
+    src: nginx.conf
+    dest: /etc/nginx/nginx.conf
+
 - name: Clean Old App content
   ansible.builtin.file:
     path: /usr/share/nginx/html
     state: absent
 
-- name: create app directory
+- name: Create app directory
   ansible.builtin.file:
     path: /usr/share/nginx/html
     state: directory
@@ -25,9 +30,7 @@
     remote_src: yes
 
 - name: Start Nginx
-  ansible.builtin.service:
-    name: nginx
+  ansible.builtin.systemd:
     state: restarted
+    name: nginx
     enabled: true
-
-
