--- a/roles/catalogue/tasks/main.yml
+++ b/roles/catalogue/tasks/main.yml
@@ -1,4 +1,4 @@
-- name: import common nodejs
-  ansible.builtin.import_roles:
+- name: Import Common NodeJS
+  ansible.builtin.import_role:
     name: common
     tasks_from: nodejs
