--- a/roles/common/tasks/app_prereq.yml
+++ b/roles/common/tasks/app_prereq.yml
@@ -16,13 +16,16 @@
     path: /app
     state: absent
 
-- name: create app directory
+- name: Create app directory
   ansible.builtin.file:
     path: /app
     state: directory
 
 - name: Download App Content
   ansible.builtin.unarchive:
-    src: https://roboshop-artifacts.s3.amazonaws.com/${{component}}.zip
+    src: https://roboshop-artifacts.s3.amazonaws.com/{{component}}.zip
     dest: /app
     remote_src: yes
+
+
+
