--- a/roles/common/tasks/nodejs.yml
+++ b/roles/common/tasks/nodejs.yml
@@ -15,22 +15,32 @@
 #
 #  func_schema_setup
 #  func_systemd_setup
-
-
 - name: Configuring NodeJS repos
   ansible.builtin.shell: curl -sL https://rpm.nodesource.com/setup_lts.x | bash
-
 
 - name: Install NodeJS
   ansible.builtin.yum:
     name: nodejs
     state: installed
 
-name: Include task list in play
+- name: Include app_prerequisites
   ansible.builtin.import_tasks:
     file: app_prereq.yml
 
--name: Install NodeJS Dependencies
+- name: Install NodeJS dependencies
   ansible.builtin.shell: npm install
   args:
     chdir: /app
+
+- name: Include schema setup
+  ansible.builtin.import_tasks:
+    file: schema_setup.yml
+
+- name: Include SystemD
+  ansible.builtin.import_tasks:
+    file: systemd_setup.yml
+
+- name: Import Prometheus
+  ansible.builtin.import_role:
+    name: prometheus
+    tasks_from: node_exporter
