--- a/roles/cart/tasks/main.yml
+++ b/roles/cart/tasks/main.yml
@@ -1,3 +1,4 @@
-- name: demo
-  ansible.builtin.debug:
-    msg: component - cart
+- name: Import Common NodeJS
+  ansible.builtin.import_role:
+    name: common
+    tasks_from: nodejs
