--- a/roles/shipping/tasks/main.yml
+++ b/roles/shipping/tasks/main.yml
@@ -1,3 +1,4 @@
-- name: demo
-  ansible.builtin.debug:
-    msg: component - shipping
+- name: Import Common Java
+  ansible.builtin.import_role:
+    name: common
+    tasks_from: java
