--- a/roles/common/tasks/nodejs.yml
+++ b/roles/common/tasks/nodejs.yml
@@ -36,9 +36,9 @@
   ansible.builtin.import_tasks:
     file: schema_setup.yml
 
-- name: Include SystemD
-  ansible.builtin.import_tasks:
-    file: systemd_setup.yml
+#- name: Include SystemD
+ # ansible.builtin.import_tasks:
+  #  file: systemd_setup.yml
 
 #- name: Import Prometheus
  # ansible.builtin.import_role:
