--- a/roles/common/tasks/schema_setup.yml
+++ b/roles/common/tasks/schema_setup.yml
@@ -31,8 +31,8 @@
         state: installed
 
     - name: Load Schema
-      #ansible.builtin.shell: mongo --host {{ lookup('aws_ssm', '{{ env }}.{{ component }}.mongo_endpoint', region='us-east-1' ) }} </app/schema/{{component}}.js
-      ansible.builtin.shell: mongo --host mongodb-dev.priyavenkat.online < /app/schema/{{component}}.js
+      ansible.builtin.shell: mongo --host {{ lookup('aws_ssm', '{{ env }}.{{ component }}.mongo_endpoint', region='us-east-1' ) }} </app/schema/{{component}}.js
+      #ansible.builtin.shell: mongo --host mongodb-dev.priyavenkat.online < /app/schema/{{component}}.js
 - name: Load MySQL Schema
   when: schema_setup == "mysql"
   block:
