--- a/roles/payment/tasks/main.yml
+++ b/roles/payment/tasks/main.yml
@@ -1,3 +1,4 @@
-- name: demo
-  ansible.builtin.debug:
-    msg: component - payment
+- name: Import Common Python
+  ansible.builtin.import_role:
+    name: common
+    tasks_from: python
