--- a/roles/payment/template/payment.service
+++ b/roles/payment/template/payment.service
@@ -4,13 +4,13 @@ Description=Payment Service
 [Service]
 User=root
 WorkingDirectory=/app
-Environment=CART_HOST=cart-dev.priyavenkat.online
-Environment=CART_PORT=8080
-Environment=USER_HOST=user-dev.priyavenkat.online
-Environment=USER_PORT=8080
-Environment=AMQP_HOST=rabbitmq-dev.priyavenkat.online
-Environment=AMQP_USER=roboshop
-Environment=AMQP_PASS=roboshop123
+Environment=CART_HOST={{ lookup('aws_ssm', '{{ env }}.payment.cart_host', region='us-east-1' ) }}
+Environment=CART_PORT={{ lookup('aws_ssm', '{{ env }}.payment.cart_port', region='us-east-1' ) }}
+Environment=USER_HOST={{ lookup('aws_ssm', '{{ env }}.payment.user_host', region='us-east-1' ) }}
+Environment=USER_PORT={{ lookup('aws_ssm', '{{ env }}.payment.user_port', region='us-east-1' ) }}
+Environment=AMQP_HOST={{ lookup('aws_ssm', '{{ env }}.payment.amqp_host', region='us-east-1' ) }}
+Environment=AMQP_USER={{ lookup('aws_ssm', '{{ env }}.payment.amqp_user', region='us-east-1' ) }}
+Environment=AMQP_PASS={{ lookup('aws_ssm', '{{ env }}.payment.amqp_pass', region='us-east-1' ) }}
 
 ExecStart=/usr/local/bin/uwsgi --ini payment.ini
 ExecStop=/bin/kill -9 $MAINPID
